objects/CB_Roster__c.object
<CustomObject>
    <description>This object is used to track both ingoing, current, and past employees. Items on the object are meant to help plan capacity.</description>
    <fields>
        <fullName>Advocate_Manager_Email__c</fullName>
        <description>Updated through a workflow. Not intended to be populated through the page layout.</description>
        <label>Advocate Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Advocate_Manager_Text__c</fullName>
        <inlineHelpText>Use this field if the user does not have a Salesforce user account yet.</inlineHelpText>
        <label>Advocate Manager Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advocate_Manager__c</fullName>
        <formula>Advocate__r.Manager.FirstName +&quot; &quot;+ Advocate__r.Manager.LastName</formula>
        <label>Advocate Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocate_Text__c</fullName>
        <inlineHelpText>Use this field to list an Advocate&apos;s name if they do not have a Salesforce user account yet.</inlineHelpText>
        <label>Advocate Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advocate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rosters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attrition_Reason__c</fullName>
        <label>Attrition Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Came_From__c</fullName>
        <label>Came From</label>
        <picklist>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capacity_Override__c</fullName>
        <label>Capacity Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_Type__c</fullName>
        <inlineHelpText>&quot;Low:  Associate is struggling and would work better with a lower load
Normal:  Associate is ok at normal load
High:  Associate is quick and can handle a slightly higher load
No New Accounts:  Associate cannot receive new accounts at this time&quot;</inlineHelpText>
        <label>Capacity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No New Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Seattle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_in_Office__c</fullName>
        <label>Days in Office</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Desk_or_Location__c</fullName>
        <label>Desk # or Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <label>Employee Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Explain__c</fullName>
        <inlineHelpText>Please explain the reason for no new accounts status and/or the capacity override limit.</inlineHelpText>
        <label>Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IT Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interviewing_Team__c</fullName>
        <label>Interviewing Team</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Replaced_Req__c</fullName>
        <description>This field may be blank if this is a new headcount.</description>
        <inlineHelpText>Enter the last day for the individual who is being replaced with this Requisition.</inlineHelpText>
        <label>Last Day of Replaced Req</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_Date__c</fullName>
        <label>Leave Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_Reason__c</fullName>
        <label>Leave Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Left CDK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ManagerIsMe__c</fullName>
        <formula>IF( Advocate__r.Manager.Id  = $User.Id ,  &quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>ManagerIsMe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_1__c</fullName>
        <label>OEM 1</label>
        <picklist>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada - French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW Care</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OEM_2__c</fullName>
        <label>OEM 2</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada - French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Endorsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Endorsed Canada - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Endorsed Canada - French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volvo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OEM_3__c</fullName>
        <label>OEM 3</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Canada - French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Endorsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Endorsed Canada - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Endorsed Canada - French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volvo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>AA I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ramp_Start_Date__c</fullName>
        <inlineHelpText>The date the Advocate can start taking new accounts.</inlineHelpText>
        <label>Ramp Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>GM - Central N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM - Central S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM - Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM - Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMA - Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMA - Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMA - Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HMA - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW - Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW - Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW - Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW - S Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW - Southeast</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requisition_Approval_Date__c</fullName>
        <inlineHelpText>The date the requisition was approved and interviews can start</inlineHelpText>
        <label>Requisition Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requisition_Name__c</fullName>
        <label>Requisition #/Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requisition_Request_Date__c</fullName>
        <inlineHelpText>The date the requisition was requested.</inlineHelpText>
        <label>Requisition Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requisition_Status_Reason__c</fullName>
        <inlineHelpText>Please provide a Reason if you selected &apos;Other&apos; as the status.</inlineHelpText>
        <label>Requisition Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requisition_Status__c</fullName>
        <inlineHelpText>If you choose &apos;Other&apos;, you must provide the reason.</inlineHelpText>
        <label>Requisition Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shift_Time__c</fullName>
        <inlineHelpText>Please enter the typical shift stat time for this Advocate. Time zone will be assumed based on associate city (ie. Seattle = PST).</inlineHelpText>
        <label>Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>The date the Advocate started working in their current role.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Role__c</fullName>
        <label>Status/Role</label>
        <picklist>
            <picklistValues>
                <fullName>Attrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMLA-In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMLA-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Req: Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Req: Lead, Manager, etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Attrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <picklist>
            <picklistValues>
                <fullName>Office</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Shore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Roster</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requisition_Name__c</columns>
        <columns>Requisition_Status__c</columns>
        <columns>Advocate__c</columns>
        <columns>Advocate_Text__c</columns>
        <columns>Advocate_Manager__c</columns>
        <columns>Capacity_Type__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Leave_Date__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X01_New_Hires</fullName>
        <columns>NAME</columns>
        <columns>Requisition_Name__c</columns>
        <columns>Advocate_Text__c</columns>
        <columns>Advocate__c</columns>
        <columns>Advocate_Manager__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Shift_Time__c</columns>
        <columns>Ramp_Start_Date__c</columns>
        <columns>IT_Requested__c</columns>
        <columns>City__c</columns>
        <columns>Requisition_Status__c</columns>
        <columns>Advocate_Manager_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Role__c</field>
            <operation>equals</operation>
            <value>New Hire</value>
        </filters>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>AA I,AA II,AA III,AA IV,Advocate</value>
        </filters>
        <label>2 - New Hires (Advocate Only)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X0_My_Team</fullName>
        <columns>NAME</columns>
        <columns>Advocate__c</columns>
        <columns>Capacity_Type__c</columns>
        <columns>Explain__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Attrition_Reason__c</columns>
        <columns>Shift_Time__c</columns>
        <columns>Position__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advocate_Manager__c</field>
            <operation>equals</operation>
            <value>Mary Aske</value>
        </filters>
        <filters>
            <field>Status_Role__c</field>
            <operation>notEqual</operation>
            <value>Attrition</value>
        </filters>
        <label>9 - Mary Aske</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1_Open_Reqs_Advocate_Only</fullName>
        <columns>NAME</columns>
        <columns>Requisition_Name__c</columns>
        <columns>City__c</columns>
        <columns>Advocate_Text__c</columns>
        <columns>Last_Day_of_Replaced_Req__c</columns>
        <columns>Requisition_Request_Date__c</columns>
        <columns>Requisition_Approval_Date__c</columns>
        <columns>Requisition_Status__c</columns>
        <columns>Requisition_Status_Reason__c</columns>
        <columns>OEM_1__c</columns>
        <columns>Position__c</columns>
        <columns>Advocate_Manager_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Role__c</field>
            <operation>equals</operation>
            <value>Open Req: Advocate</value>
        </filters>
        <label>1 - Open Reqs (Advocate Only)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1_Open_Reqs_Non_AA</fullName>
        <columns>NAME</columns>
        <columns>Requisition_Name__c</columns>
        <columns>City__c</columns>
        <columns>Advocate_Text__c</columns>
        <columns>Last_Day_of_Replaced_Req__c</columns>
        <columns>Requisition_Request_Date__c</columns>
        <columns>Requisition_Approval_Date__c</columns>
        <columns>Requisition_Status__c</columns>
        <columns>Requisition_Status_Reason__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Ramp_Start_Date__c</columns>
        <columns>OEM_1__c</columns>
        <columns>Position__c</columns>
        <columns>Advocate_Manager_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Role__c</field>
            <operation>equals</operation>
            <value>&quot;Open Req: Lead, Manager, etc&quot;</value>
        </filters>
        <label>1 - Open Reqs (Non-AA)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2_New_Hires_All_Positions</fullName>
        <columns>NAME</columns>
        <columns>Requisition_Name__c</columns>
        <columns>Position__c</columns>
        <columns>Advocate_Text__c</columns>
        <columns>Advocate__c</columns>
        <columns>Advocate_Manager__c</columns>
        <columns>Shift_Time__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Ramp_Start_Date__c</columns>
        <columns>IT_Requested__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Role__c</field>
            <operation>equals</operation>
            <value>New Hire</value>
        </filters>
        <label>2 - New Hires (All Positions)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3_Attrition</fullName>
        <columns>NAME</columns>
        <columns>Advocate__c</columns>
        <columns>Advocate_Text__c</columns>
        <columns>Leave_Date__c</columns>
        <columns>Leave_Reason__c</columns>
        <columns>City__c</columns>
        <columns>Position__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Advocate_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Role__c</field>
            <operation>equals</operation>
            <value>Attrition</value>
        </filters>
        <label>4 - Attrition</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3_FMLA</fullName>
        <columns>NAME</columns>
        <columns>Advocate__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Ramp_Start_Date__c</columns>
        <columns>Position__c</columns>
        <columns>Capacity_Override__c</columns>
        <columns>Advocate_Manager__c</columns>
        <columns>OEM_1__c</columns>
        <columns>Leave_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Role__c</field>
            <operation>equals</operation>
            <value>FMLA-In,FMLA-Out</value>
        </filters>
        <label>3 - FMLA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X4_Manager_CAM_Other_List</fullName>
        <columns>NAME</columns>
        <columns>Advocate_Text__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Leave_Date__c</columns>
        <columns>Leave_Reason__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>CAM,Manager,Other</value>
        </filters>
        <label>5 - Manager, CAM, Other List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X8_Michael_Hoagland</fullName>
        <columns>NAME</columns>
        <columns>Advocate__c</columns>
        <columns>Capacity_Type__c</columns>
        <columns>Explain__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Attrition_Reason__c</columns>
        <columns>Shift_Time__c</columns>
        <columns>Position__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Language__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advocate_Manager__c</field>
            <operation>equals</operation>
            <value>Michael Hoagland</value>
        </filters>
        <filters>
            <field>Status_Role__c</field>
            <operation>notEqual</operation>
            <value>Attrition</value>
        </filters>
        <label>8 - Michael Hoagland</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X9_Adrienne_Bratton</fullName>
        <columns>NAME</columns>
        <columns>Advocate__c</columns>
        <columns>Capacity_Type__c</columns>
        <columns>Explain__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Attrition_Reason__c</columns>
        <columns>Shift_Time__c</columns>
        <columns>Position__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Language__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advocate_Manager__c</field>
            <operation>equals</operation>
            <value>Adrienne Bratton</value>
        </filters>
        <filters>
            <field>Status_Role__c</field>
            <operation>notEqual</operation>
            <value>Attrition</value>
        </filters>
        <label>9 - Adrienne Bratton</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X9_Carmen_Sutherlin</fullName>
        <columns>NAME</columns>
        <columns>Advocate__c</columns>
        <columns>Capacity_Type__c</columns>
        <columns>Explain__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Attrition_Reason__c</columns>
        <columns>Shift_Time__c</columns>
        <columns>Position__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Language__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advocate_Manager__c</field>
            <operation>equals</operation>
            <value>Carmen Sutherlin</value>
        </filters>
        <filters>
            <field>Status_Role__c</field>
            <operation>notEqual</operation>
            <value>Attrition</value>
        </filters>
        <label>9 - Carmen Sutherlin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X9_Christian_Guerra</fullName>
        <columns>NAME</columns>
        <columns>Advocate__c</columns>
        <columns>Capacity_Type__c</columns>
        <columns>Explain__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Attrition_Reason__c</columns>
        <columns>Shift_Time__c</columns>
        <columns>Position__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Language__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advocate_Manager__c</field>
            <operation>equals</operation>
            <value>Christian Guerra</value>
        </filters>
        <filters>
            <field>Status_Role__c</field>
            <operation>notEqual</operation>
            <value>Attrition</value>
        </filters>
        <label>9 - Christian Guerra</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X9_Denise_Vangeystel</fullName>
        <columns>NAME</columns>
        <columns>Advocate__c</columns>
        <columns>Capacity_Type__c</columns>
        <columns>Explain__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Attrition_Reason__c</columns>
        <columns>Shift_Time__c</columns>
        <columns>Position__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Language__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advocate_Manager__c</field>
            <operation>equals</operation>
            <value>Denise Vangeystel</value>
        </filters>
        <filters>
            <field>Status_Role__c</field>
            <operation>notEqual</operation>
            <value>Attrition</value>
        </filters>
        <label>9 - Denise Vangeystel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X9_J_Midgett1</fullName>
        <columns>NAME</columns>
        <columns>Advocate__c</columns>
        <columns>Capacity_Type__c</columns>
        <columns>Explain__c</columns>
        <columns>Status_Role__c</columns>
        <columns>Attrition_Reason__c</columns>
        <columns>Shift_Time__c</columns>
        <columns>Position__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Language__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Advocate_Manager__c</field>
            <operation>equals</operation>
            <value>Katrina Martin</value>
        </filters>
        <filters>
            <field>Status_Role__c</field>
            <operation>notEqual</operation>
            <value>Attrition</value>
        </filters>
        <label>9 - Katrina Martin</label>
        <language>en_US</language>
    </listViews>
</CustomObject>